# cf-services

./: .editorconfig  Cargo.toml  README.md
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: release.yml  rust.yml
src/: lib.rs
tests/: integration_test.rs
